--- a/example/Makefile
+++ b/example/Makefile
@@ -1,5 +1,5 @@
 OCAML    = ocamlfind ocamlc -g -package js_of_ocaml -package js_of_ocaml.ppx
-ROUTER   = -package router -package router.ppx
+ROUTER   = -package jsoo_router -package jsoo_router.ppx
 JSOCAML  = js_of_ocaml +weak.js +toplevel.js
 
 .PHONY: src/example.ml
